--- a/deploy/community/kustomization.yaml
+++ b/deploy/community/kustomization.yaml
@@ -13,3 +13,7 @@ vars:
     apiVersion: apps/v1
     kind: Deployment
     name: community
+images:
+- name: avocado-community
+  newName: 749740892195.dkr.ecr.ap-northeast-2.amazonaws.com/avocado-community
+  newTag: "141"
