(Build #154) update image tags

--- a/deploy/commercial/kustomization.yaml
+++ b/deploy/commercial/kustomization.yaml
@@ -15,3 +15,5 @@ vars:
     name: commercial
 images:
 - name: avocado-commercial
+  newName: 749740892195.dkr.ecr.ap-northeast-2.amazonaws.com/avocado-commercial
+  newTag: "154"
