(Build #156) update image tags

--- a/deploy/client/kustomization.yaml
+++ b/deploy/client/kustomization.yaml
@@ -15,3 +15,5 @@ vars:
     name: client
 images:
 - name: avocado-client
+  newName: 749740892195.dkr.ecr.ap-northeast-2.amazonaws.com/avocado-client
+  newTag: "156"
