service clusterIP로 변경

--- a/deploy/client/service.yaml
+++ b/deploy/client/service.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   selector:
     app: client
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - protocol: TCP
       port: 80
