--- a/deploy/community/service.yaml
+++ b/deploy/community/service.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   selector:
     app: community
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - port: 80 # 서비스가 생성할 포트  
       targetPort: 8080 # 서비스가 접근할 pod의 포트
