--- a/deploy/ingress.yaml
+++ b/deploy/ingress.yaml
@@ -5,12 +5,20 @@ metadata:
   name: my-ingress
   annotations:
     kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/group.name: avocado
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
 spec:
   rules:
   - http:
       paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: avocado-client
+            port:
+              number: 80      
       - path: /merchandise
         pathType: Prefix
         backend:
@@ -53,10 +61,35 @@ spec:
             name: avocado-commercial
             port:
               number: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  namespace: argocd
+  name: my-ingress
+  annotations:
+    kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/group.name: avocado
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
+spec:
+  rules:
+  - http:
+      paths:    
       - path: /argocd
         pathType: Prefix
         backend:
           service:
             name: argocd-server
             port:
-              number: 80
+              number: 80    
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   annotations:
+#   name: headless-default-to-argocd
+#   namespace: default
+# spec:
+#   clusterIP: None
+#   externalName: argocd-server.argocd.svc.cluster.local # reference svc-C in ns-B
