--- a/deploy/ingress.yaml
+++ b/deploy/ingress.yaml
@@ -19,46 +19,46 @@ spec:
             name: avocado-client
             port:
               number: 80      
-      - path: /merchandise
+      - path: /api/merchandise
         pathType: Prefix
         backend:
           service:
             name: avocado-product
             port:
               number: 80
-      - path: /member
+      - path: /api/member
         pathType: Prefix
         backend:
           service:
             name: avocado-member
             port:
               number: 80              
-      - path: /search
+      - path: /api/search
         pathType: Prefix
         backend:
           service:
             name: avocado-search
             port:
-              number: 80        
-      # - path: /payment
-      #   pathType: Prefix
-      #   backend:
-      #     service:
-      #       name: avocado-payment
-      #       port:
-      #         number: 80                       
-      - path: /community
+              number: 80                            
+      - path: /api/community
         pathType: Prefix
         backend:
           service:
             name: avocado-community
             port:
               number: 80         
-      - path: /commercial
+      - path: /api/commercial
         pathType: Prefix
         backend:
           service:
             name: avocado-commercial
+            port:
+              number: 80
+      - path: /api/payment
+        pathType: Prefix
+        backend:
+          service:
+            name: avocado-payment
             port:
               number: 80
 ---
