change kafka service nodeport to loadbalancer

--- a/deploy/strimzi-kafka/kafka/kafka-persistent.yaml
+++ b/deploy/strimzi-kafka/kafka/kafka-persistent.yaml
@@ -17,7 +17,7 @@ spec:
         tls: false
       - name: external
         port: 9094
-        type: nodeport
+        type: loadbalancer
         tls: false
     config:
       offsets.topic.replication.factor: 3
