--- a/deploy/strimzi-kafka/topic/kafka-topic.yaml
+++ b/deploy/strimzi-kafka/topic/kafka-topic.yaml
@@ -36,3 +36,17 @@ spec:
   config:
     retention.ms: 7200000
     segment.bytes: 1073741824
+---
+apiVersion: kafka.strimzi.io/v1beta2
+kind: KafkaTopic
+metadata:
+  name: test-ad-view
+  labels:
+    strimzi.io/cluster: my-cluster
+spec:
+  partitions: 3
+  replicas: 2
+  config:
+    retention.ms: 7200000
+    segment.bytes: 1073741824
+
