--- a/deploy/statistics/kustomization.yaml
+++ b/deploy/statistics/kustomization.yaml
@@ -15,3 +15,5 @@ vars:
     name: statistics
 images:
 - name: avocado-statistics
+  newName: 749740892195.dkr.ecr.ap-northeast-2.amazonaws.com/avocado-statistics
+  newTag: "248"
