--- a/deploy/strimzi-kafka/topic/kafka-topic.yaml
+++ b/deploy/strimzi-kafka/topic/kafka-topic.yaml
@@ -101,3 +101,16 @@ spec:
   config:
     retention.ms: 7200000
     segment.bytes: 1073741824
+---
+apiVersion: kafka.strimzi.io/v1beta2
+kind: KafkaTopic
+metadata:
+  name: test-purchase-history1
+  labels:
+    strimzi.io/cluster: my-cluster
+spec:
+  partitions: 3
+  replicas: 2
+  config:
+    retention.ms: 7200000
+    segment.bytes: 1073741824
