--- a/backend/statistics/build.gradle
+++ b/backend/statistics/build.gradle
@@ -11,6 +11,9 @@ plugins {
 
     // QueryDSL
     id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
+
+    // avro
+    id "com.github.davidmc24.gradle.plugin.avro" version "1.7.1"
 }
 
 group = 'com.avocado'
@@ -26,6 +29,9 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://packages.confluent.io/maven"
+    }
 }
 
 dependencies {
@@ -53,7 +59,13 @@ dependencies {
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}" // QueryDSL 라이브러리
     annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}" //  QueryDSL 관련 코드 생성 기능 제공
 
+    // avro, schema
+    implementation "org.apache.avro:avro:1.11.1"
+    implementation 'io.confluent:kafka-streams-avro-serde:7.3.3'
 
+    // kafka
+    implementation 'org.springframework.kafka:spring-kafka'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
 
     // jwt
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
