--- a/backend/statistics/src/main/resources/application.yml
+++ b/backend/statistics/src/main/resources/application.yml
@@ -4,6 +4,11 @@ spring:
     username: root
     password: yasim506
     driver-class-name: com.mysql.cj.jdbc.Driver
+  kafka:
+    bootstrap-servers: a62e5b172168c40419f9a1af18763a94-214776296.ap-northeast-2.elb.amazonaws.com:9094
+    result-config:
+      topic: test-result1
+
 
 mybatis:
   configuration:
