--- a/backend/streaming/build.gradle
+++ b/backend/streaming/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 
 	implementation 'io.confluent:kafka-schema-registry-client:7.3.3' // or whatever the latest version available
 	implementation 'io.confluent:kafka-avro-serializer:7.3.3' // or whatever the latest version available
+// https://mvnrepository.com/artifact/io.confluent/kafka-streams-avro-serde
+	implementation 'io.confluent:kafka-streams-avro-serde:7.3.3'
 
 
 }
