--- a/deploy/streaming/kustomization.yaml
+++ b/deploy/streaming/kustomization.yaml
@@ -15,3 +15,5 @@ vars:
     name: streaming
 images:
 - name: avocado-streaming
+  newName: 749740892195.dkr.ecr.ap-northeast-2.amazonaws.com/avocado-streaming
+  newTag: "307"
