S08P31A506-159-streaming [feat] 회원 이벤트 및 광고 정보 이벤트 구현 중

--- a/backend/product/src/main/resources/application.yml
+++ b/backend/product/src/main/resources/application.yml
@@ -26,7 +26,8 @@ spring:
       topic: test-purchase-history1
     review-config:
       topic: test-review
-
+    member-event-config:
+      topic: test-member-event
 
 
 server:
