--- a/backend/statistics/src/main/resources/application.yml
+++ b/backend/statistics/src/main/resources/application.yml
@@ -8,6 +8,8 @@ spring:
     bootstrap-servers: a62e5b172168c40419f9a1af18763a94-214776296.ap-northeast-2.elb.amazonaws.com:9094
     result-config:
       topic: test-result1
+    ad-status-config:
+      topic: test-ad-status
 
 
 mybatis:
