--- a/backend/commercial/build.gradle
+++ b/backend/commercial/build.gradle
@@ -49,7 +49,7 @@ dependencies {
 
     // avro
     implementation "org.apache.avro:avro:1.11.1"
-    implementation 'io.confluent:kafka-avro-serializer:7.3.3'
+    implementation 'io.confluent:kafka-streams-avro-serde:7.3.3'
 }
 
 tasks.named('test') {
