--- a/backend/commercial/src/main/resources/application.properties
+++ b/backend/commercial/src/main/resources/application.properties
@@ -13,6 +13,7 @@ server.servlet.context-path=/api/commercial
 # kafka
 spring.kafka.bootstrap-servers=a62e5b172168c40419f9a1af18763a94-214776296.ap-northeast-2.elb.amazonaws.com:9094
 spring.kafka.ad-config.topic=test-ad-view1
+spring.kafka.ad-status-config.topic=test-ad-status
 
 # DB username
 spring.datasource.username=root
