--- a/backend/product/build.gradle
+++ b/backend/product/build.gradle
@@ -53,7 +53,7 @@ dependencies {
 
 	// avro, schema
 	implementation "org.apache.avro:avro:1.11.1"
-	implementation 'io.confluent:kafka-avro-serializer:7.3.3'
+	implementation 'io.confluent:kafka-streams-avro-serde:7.3.3'
 
 	// jwt
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
